; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_SH2DynarecSetPC.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_SH2DynarecSetPC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSH2 = common dso_local global i32* null, align 8
@master_pc = common dso_local global i8* null, align 8
@master_ip = common dso_local global i8* null, align 8
@slave_pc = common dso_local global i8* null, align 8
@slave_ip = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SH2DynarecSetPC(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** @MSH2, align 8
  %7 = icmp eq i32* %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i8*, i8** %4, align 8
  store i8* %9, i8** @master_pc, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i8* @get_addr_ht(i8* %10)
  store i8* %11, i8** @master_ip, align 8
  br label %17

12:                                               ; preds = %2
  %13 = load i8*, i8** %4, align 8
  store i8* %13, i8** @slave_pc, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr i8, i8* %14, i64 1
  %16 = call i8* @get_addr_ht(i8* %15)
  store i8* %16, i8** @slave_ip, align 8
  br label %17

17:                                               ; preds = %12, %8
  ret void
}

declare dso_local i8* @get_addr_ht(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
